# SearchMate

./: .gitignore  BUILD.md  LICENSE  README.md  index.html  installer.nsh  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
src/: App.tsx  index.html  main.js  renderer.js  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ResultsList.tsx  SearchBar.tsx  SettingsPanel.tsx
src/main/: database.js  file-actions.js  hotkey.js  index.js  indexer.js  ipc-handlers.js  logger.js  preload.js  search.js  settings.js  tray.js  updater.js  window.js
src/renderer/: index.html  renderer.bundle.js  renderer.js
src/renderer/components/: context-menu.js  preview.js  search.js  settings.js  theme.js  utils.js
src/renderer/styles/: main.css
src/shared/: constants.js
